[package]
name = "multi-eq"
version = "0.1.1"
authors = ["Benjamin Levy <blevy@protonmail.com>"]
edition = "2018"
description = "Macros for creating custom equality trait derives"
repository = "https://github.com/Wright-Language-Developers/multi-eq-rs/"
readme = "README.md"
keywords = ["eq", "equality", "trait", "derive", "macro"]
license = "MIT"

[dependencies]
quote = "1.0.3"
syn = "1.0.16"
proc-macro2 = "1.0.9"
